Don't add SSH to price list (SAAS-723). * Display warning if SSH keys are unavailable. * Ensure that SSH section is always visible. * Render user data as text area. * Replace images with font icons.

--- a/assets/sass/blocks/appstore.scss
+++ b/assets/sass/blocks/appstore.scss
@@ -58,7 +58,9 @@
         } // &.state
         .icon {
             // display: flex;
-            width: 45px;
+            width: 55px;
+            height: 55px;
+            font-size: 50px;
             text-align: center;
             &.azure, &.gitlab, &.oracle {
                 width: 150px;
@@ -270,6 +272,12 @@
                         }
                     }
                 }
+                .warning {
+                    text-align: center;
+                    border: 1px solid #cacaca;
+                    padding: 20px;
+                    background-color: white;
+                }
             }
             form {
                 .string-field {
@@ -436,8 +444,7 @@
             }
             .keys {
                 .appstore-template {
-                    height: 80px;
-                    margin-top: 20px;
+                    height: 100px;
                 }
             }
             button {
